
= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.5.9 (future) =
* Fixed a bug where valid users can post via email even though they don't have role permissions.
* Fixed a bug where nice_name was being used in the settings screen even though user_login was needed.
* Fixed the error message when the default poster is not valid.

= 1.5.8 (2013.05.14) =
* Added additional default signature patterns.
* Fixed a bug where attachments were not showing up if :start or :end were used.

= 1.5.7 (2013.05.09) =
* Fixed bug where the admin user was not getting set as author in some cases.
* Fixed bug where file names were not being sanitized.
* Added setting to disable thumbnail generation.
* Updated the default signature patterns and help text.

= 1.5.6 (2013-05-07) =
* Fixed bug where default post format was empty when the theme didn't support any formats.
* Removed all hard coded references to wp-content.
* Fixed bug where caption wasn't being filled out in templates.
* Updated direct DB access to use standard methods.
* Added attachment template for non-audio/image/video attachments.
* Added additional checks to the test screen.
* Added new template variable {ICON}

= 1.5.5 (2013.05.02) =
* Added ability to run a manual check with debugging output.
* Added support for default post type.
* Added version number to settings page.
* Changed Admin User to Default Poster, clarified help text and changed input to combo box of valid values.
* Fixed bug where commas (,) were not allowed in signature detection.
* Fixed some CSS issues on admin page.

= 1.5.4 (2013.05.01) =
* Added support for default post format
* Fixed bug where replies were getting attached to the wrong post
* Fixed bug where tags were not being detected correctly in html emails
* Fixed bug in reply detection

= 1.5.3 (2013.04.13) =
* Added support for Featured Images
* Added support for Use Transport Layer Security (TLS)