@@ -1,19 +1,16 @@
 provide a location for custom icons. update docs about location.
 replace native imap MIME parser with flourish - http://flourishlib.com/docs/fMailbox
 automatically create category if it doesn't exist. new option to allow this feature?
-WP MU support
 Add setting for category detection. I.e. checkboxes for [], -- and : styles. Default to all on.
 Add setting to not remove category text from subject/title
 Make sure all failures are sent to admin (option?) failed attachments, etc.
 Comment not being created when subject contains category command []. I.e. listserv subject lines
-rework attachment logic. video files can come through as application/octect-stream. Mail parsing should separate attachments 
-  into buckets? i.e. video, image, other. Each gets processed differently. I.e. when gallery in turned on images don't get embedded
-  but videos do.
 date: tag is being detected in body when not wanted
 Enhance #img# to specify the featured image
 Update tag_* and filter_* to handle HTML (per tag_Tags)
 "yoast" style admin sidebar - see clicky by yoast
 handle condition where only one of text/plain & text/html is supplied, but Preferred Text Type is set to the opposite.
+gallery logic dosen't handle both images and non-images
 
 standardize tags
 fix postie settings	http://alisothegeek.com/2011/01/wordpress-settings-api-tutorial-1/
@@ -26,4 +23,3 @@ fix postie settings	http://alisothegeek.com/2011/01/wordpress-settings-api-tutor
  * Test for calling from the command line
  * Support userid/domain  as a valid username
  * Make it possible to post without a script at all
- * TODO - non-image uploads get ignored in content when using autogallery - see replaceimageplaceholders
